# jc-back

./: .gitignore  Procfile  README.md  pyproject.toml  railway-setup.md  railway.toml  requirment.txt  run.py
src/: 33
src/backend/: main.py
src/backend/api/endpoint/: db.py  mapping.py  outh_log.py  routes.py  upload.py
src/backend/core/: __init__.py  config.py  database.py
src/backend/dependencies/: __init__.py  auth.py
src/backend/middleware/: __init__.py  cors.py
src/backend/models/: file.py  mapping.py  product.py  user.py
src/backend/schemas/: __init__.py  token.py  user.py
src/backend/utils/: __init__.py  security.py  storage.py
uploads/: 843a83e1-4a8b-4368-9b57-6cf43ca95ded.xlsx  97e9ec08-609e-41b9-852f-c21749fc1bc4.xlsx  jc_03.xlsx
