[project]
name = "backend"
version = "0.1.0"
description = "A professional FastAPI backend application with authentication and user management"
readme = "README.md"
authors = [
    { name = "Ehtisham-Hassan", email = "f223407@cfd.nu.edu.pk" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy>=2.0.41",
    "aiosqlite>=0.21.0",
    "alembic>=1.16.4",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "httpx>=0.28.1",
    "openai-agents>=0.2.3",
    "pandas>=2.3.1",
    "asyncpg>=0.30.0",
    "openpyxl>=3.1.5",
    "pinecone>=7.3.0",
    "openai>=1.97.0",
    "git-filter-repo>=2.47.0",
]

[project.scripts]
backend = "backend.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
